fix: trying to fix overflow on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,9 @@
 /* @import url('https://fonts.googleapis.com/css?family=Manrope'); */
 @import url('https://fonts.googleapis.com/css?family=Inter:wght@100;200;300;400;500;600&display=swap');
 .home-page {
-    max-width: max-content;
+    margin: 0;
+    word-wrap: break-word;
+    /* max-width: max-content; */
 }
 
 .p a{
